fix(Images): 修复轮播图动画不连贯问题
通过在 Transition ENTERING 状态时强制触发重排(reflow)，确保动画正确执行。
参考了 Carousel 组件的实现方式。

--- a/packages/amis-ui/scss/components/_images.scss
+++ b/packages/amis-ui/scss/components/_images.scss
@@ -39,26 +39,31 @@
       cursor: grab;
 
       &-container {
-        display: flex;
+        position: relative;
         width: 100%;
         height: 100%;
-        will-change: transform;
-        user-select: none;
+        min-height: 300px;
       }
 
       &-item {
-        width: 100%;
         margin: 0;
         display: flex;
         align-items: center;
         justify-content: center;
         background: #fff;
+        will-change: transform, opacity;
+        backface-visibility: hidden;
       }
 
       &-itemInner {
         position: relative;
         max-width: 100%;
         max-height: 100vh;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
       }
 
       .#{$ns}Image-image {
