--- a/packages/amis-ui/scss/components/_list.scss
+++ b/packages/amis-ui/scss/components/_list.scss
@@ -10,6 +10,8 @@
     border: var(--List-borderWidth) solid var(--List-borderColor);
     background: var(--List-bg);
     margin-bottom: var(--gap-sm);
+    position: relative;
+    margin-right: px2rem(30px);
   }
 
   &-toolbar {
@@ -252,5 +254,35 @@
   &--hasItemAction:hover {
     color: var(--ListMenu-item--onHover-color);
     background: var(--ListMenu-item--onHover-bg);
+  }
+}
+
+// 修改索引条样式
+.#{$ns}AlphabetIndexer {
+  position: fixed;
+  right: px2rem(30px);
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: $zindex-sticky;
+  padding: px2rem(10px) px2rem(5px);
+  background: var(--white);
+  border-radius: var(--borderRadius);
+  box-shadow: var(--boxShadow);
+
+  &-letter {
+    font-size: var(--fontSizeSm);
+    padding: px2rem(2px) px2rem(4px);
+    cursor: pointer;
+    text-align: center;
+
+    &:hover {
+      color: var(--primary);
+    }
+
+    &.is-active {
+      color: var(--white);
+      background: var(--primary);
+      border-radius: var(--borderRadius-sm);
+    }
   }
 }
