--- a/packages/amis-ui/scss/components/_list.scss
+++ b/packages/amis-ui/scss/components/_list.scss
@@ -93,6 +93,16 @@
     background: var(--Table-bg);
     z-index: $zindex-sticky;
   }
+
+  &-content-wrapper {
+    display: flex;
+    position: relative;
+  }
+
+  &-main {
+    flex: 1;
+    min-width: 0; // 防止内容溢出
+  }
 }
 
 .#{$ns}ListGroup {
@@ -259,21 +269,26 @@
 
 // 修改索引条样式
 .#{$ns}AlphabetIndexer {
-  position: fixed;
+  position: sticky;
+  top: calc(var(--affix-offset-top) + var(--gap-base));
   right: px2rem(5px);
-  top: 50%;
-  transform: translateY(-50%);
+  height: fit-content;
   padding: px2rem(10px) px2rem(5px);
   background: var(--white);
   border-radius: var(--borderRadius);
   box-shadow: var(--boxShadow);
-  z-index: $zindex-sticky;
+  z-index: 1050;
   display: flex;
   flex-direction: column;
+  align-self: flex-start;
+  overflow-y: auto;
 
+  // 移动端样式
   @media (max-width: 768px) {
-    right: px2rem(2px);
-    padding: px2rem(5px) px2rem(2px);
+    position: sticky;
+    top: calc(var(--affix-offset-top) + var(--gap-base));
+    right: px2rem(5px);
+    align-self: flex-start;
   }
 
   &-letter {
