feat:文字展示效果改为通用效果

--- a/packages/amis-ui/scss/components/_images.scss
+++ b/packages/amis-ui/scss/components/_images.scss
@@ -241,10 +241,11 @@
   }
 }
 
-.hover-slide:hover{
-  .mask{
+.hover-slide{
+  &:hover .mask{
     opacity: 1;
     transform: translate(5%, 5%);
+    z-index: 1;
   }
 }
 
@@ -422,6 +423,7 @@
     height: 0!important;
     transform-origin: bottom;
     color: #0b0a22;
+    z-index: 1;
     span{
       display: none;
     }
@@ -439,6 +441,7 @@
   .mask{
     opacity: 1;
     background: rgba(48, 133, 163, 0);
+    z-index: 1;
     span{
       position: relative;
       bottom: -10%;
@@ -476,6 +479,7 @@
 .text-style-6{
   .mask{
     opacity: 1;
+    z-index: 1;
     background: rgba(48, 133, 163, 0.4);
     span{
       position: absolute;
@@ -524,6 +528,7 @@
 .text-style-7{
   .mask{
     opacity: 1;
+    z-index: 1;
     background: rgba(48, 133, 163, 0);
     span{
       position: absolute;
