--- a/packages/amis-ui/scss/components/_images.scss
+++ b/packages/amis-ui/scss/components/_images.scss
@@ -569,6 +569,77 @@
 .#{$ns}ImagesField {
   position: relative;
   @include clearfix();
+
+  &--full {
+    position: relative;
+
+    .#{$ns}Images {
+      position: relative;
+      overflow: hidden;
+      width: 100%;
+      height: 100%;
+      cursor: grab;
+
+      &-container {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        min-height: 300px;
+      }
+
+      &-item {
+        margin: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background: #fff;
+        will-change: transform, opacity;
+        backface-visibility: hidden;
+      }
+
+      &-itemInner {
+        position: relative;
+        max-width: 100%;
+        max-height: 100vh;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      .#{$ns}Image-image {
+        display: block;
+        max-width: 100%;
+        height: auto;
+
+        &--contain {
+          object-fit: contain;
+          width: 100%;
+          height: 100%;
+        }
+
+        &--cover {
+          object-fit: cover;
+          width: 100%;
+          height: 100%;
+        }
+      }
+
+      &-itemIndex {
+        position: absolute;
+        right: 16px;
+        bottom: 16px;
+        background: rgba(0, 0, 0, 0.5);
+        color: white;
+        padding: 4px 8px;
+        border-radius: 12px;
+        font-size: 12px;
+        z-index: 10;
+        pointer-events: none;
+      }
+    }
+  }
 }
 
 .Image-view-icon {
