feat(ColumnToggler): 增加弹窗样式和布局相关属性
- 在 columns-toggler 属性表中添加了 modalSize、modalWidth、modalHeight 和 modalColumnCount 属性
- 实现列弹窗尺寸与自定义宽高配置
- 实现弹窗内每行显示列数配置
- 更新了相关的 SCSS 样式文件，增加了对新属性的样式处理

--- a/packages/amis-ui/scss/components/_column-toggler.scss
+++ b/packages/amis-ui/scss/components/_column-toggler.scss
@@ -203,6 +203,12 @@
           cursor: move;
         }
       }
+
+      @for $i from 1 through 10 {
+        &--column-#{$i} > .#{$ns}ColumnToggler-menuItem {
+          width: calc((100% - var(--ColumnToggler-item-margin) * $i * 2) / $i);
+        }
+      }
     }
 
     &-footer {
