feat: 导航增加横向滚动交互，修复panel一级路由跳转整体刷新问题，修复disableOverflow导致下拉菜单不生效的问题

--- a/packages/amis-ui/scss/themes/_common.scss
+++ b/packages/amis-ui/scss/themes/_common.scss
@@ -85,6 +85,7 @@
 @import '../components/grid-nav';
 @import '../components/shape';
 @import '../components/slider';
+@import '../components/horizontal-scroll';
 
 @import '../components/form/fieldset';
 @import '../components/form/group';
