style: 调整 crud 的自动高度撑开模式的样式, 去掉多余滚动条

--- a/packages/amis-ui/scss/components/_table.scss
+++ b/packages/amis-ui/scss/components/_table.scss
@@ -1034,8 +1034,12 @@
         &.#{$ns}Table-table--tableFillHeight {
           > tbody {
             height: calc(
-              var(--Table-content-height) - var(--Table-thead-height)
+              var(--Table-content-height) - var(--Table-thead-height) - 20px
             );
+
+            > tr > td {
+              border-bottom: none;
+            }
           }
         }
       }
