fix: table sticky时border未跟随导致底部文字透出

--- a/packages/amis-ui/scss/components/_table2.scss
+++ b/packages/amis-ui/scss/components/_table2.scss
@@ -629,6 +629,10 @@
 
       .#{$ns}Table-table {
         border-collapse: separate;
+
+        > tbody > tr > td {
+          border-top: none;
+        }
       }
 
       .#{$ns}Table-row {
