[fix amis-editor]修复block容器的最小高度问题

--- a/packages/amis-editor-core/scss/editor.scss
+++ b/packages/amis-editor-core/scss/editor.scss
@@ -1314,7 +1314,7 @@
 
   &.layout-content {
     height: 100%;
-    min-height: 30px;
+    min-height: $Editor-placehoder-height;
   }
 
   &.fill-placeholder {
@@ -1337,7 +1337,7 @@
 
 [data-region] {
   position: relative;
-  min-height: 34px;
+  min-height: $Editor-placehoder-height;
 
   &:empty {
     min-width: 20px;
