fix: 修复 table 的 showIndex 开启在列选择界面中显示为空的问题

--- a/packages/amis-ui/scss/components/_column-toggler.scss
+++ b/packages/amis-ui/scss/components/_column-toggler.scss
@@ -92,6 +92,10 @@
       background: var(--DropDown-menu-borderColor);
       padding: 0;
     }
+
+    > label {
+      margin: 0;
+    }
   }
 
   &-menu:not(.is-mobile) > li {
