feat: 轮播图增加跑马灯模式

--- a/packages/amis-ui/scss/components/_carousel.scss
+++ b/packages/amis-ui/scss/components/_carousel.scss
@@ -270,3 +270,23 @@
     pointer-events: none;
   }
 }
+
+.#{$ns}Marquee-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.#{$ns}Marquee-content {
+  display: flex;
+  align-items: center;
+  will-change: transform;
+  height: 100%;
+}
+
+.#{$ns}Marquee-item {
+  width: 100%;
+  height: 100%;
+  flex: 0 0 auto;
+}
