fix: 表格编辑框-可复制按钮、快速编辑按钮等在非确认模式下换行

--- a/packages/amis-ui/scss/components/_popoverable.scss
+++ b/packages/amis-ui/scss/components/_popoverable.scss
@@ -22,10 +22,13 @@
   position: relative;
 
   .#{$ns}Field-popOverWrap {
+    display: -webkit-inline-box;
+    vertical-align: middle;
+
     &-ellipsis {
       width: auto;
       overflow: hidden;
-      display: -webkit-box;
+      display: -webkit-inline-box;
       -webkit-box-orient: vertical;
       line-clamp: 1;
       -webkit-line-clamp: 1;
@@ -35,6 +38,19 @@
     &-noWrap {
       white-space: nowrap;
     }
+  }
+}
+
+.#{$ns}Field--copyable {
+  white-space: nowrap;
+
+  .#{$ns}Form-item {
+    display: inline-block;
+    margin-bottom: unset;
+    vertical-align: middle;
+  }
+  .#{$ns}Field-copyBtn {
+    vertical-align: middle;
   }
 }
 
