fix: 修复弹窗中 form 可能内容超出弹窗的问题

--- a/packages/amis-ui/scss/components/form/_form.scss
+++ b/packages/amis-ui/scss/components/form/_form.scss
@@ -538,6 +538,7 @@
 
   .#{$ns}Form--column-#{$i} > [data-role*='container'] {
     flex: 100%;
+    min-width: 0;
   }
 
   .#{$ns}Form--column-#{$i} > .#{$ns}Form-item:nth-last-child(-n + #{$i}) {
