fix: 修复级联选择器拿不到最新选中值+修复开启溢出隐藏后中文的第二行会露出一点

--- a/packages/amis-ui/scss/components/_popoverable.scss
+++ b/packages/amis-ui/scss/components/_popoverable.scss
@@ -27,6 +27,7 @@
 
     &-ellipsis {
       width: auto;
+      max-height: var(--sizes-base-15);
       overflow: hidden;
       display: -webkit-inline-box;
       -webkit-box-orient: vertical;
