chore: 虚拟滚动自动切成 fiexed table layout

--- a/packages/amis-ui/scss/components/_table.scss
+++ b/packages/amis-ui/scss/components/_table.scss
@@ -318,6 +318,8 @@
     &.is-layout-fixed td {
       white-space: normal;
       word-break: break-all;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
 
     &.table-fixed-left .is-sticky-last-left:after {
