fix: 修复 h5 编辑器内容撑开后删除元素不能恢复的问题

--- a/packages/amis-editor-core/scss/editor.scss
+++ b/packages/amis-editor-core/scss/editor.scss
@@ -433,6 +433,7 @@
     display: flex;
     flex-direction: column;
     flex: 1;
+    min-height: 667px;
   }
 
   > .frame-content .ae-Dialog-preview-mount-node > *:first-child {
