--- a/packages/amis-ui/scss/components/_modal.scss
+++ b/packages/amis-ui/scss/components/_modal.scss
@@ -64,6 +64,9 @@
       animation-name: modalOut;
     }
   }
+  &-fullScreen{
+    margin: auto;
+  }
 
   &-draggable > &-header {
     cursor: move;
@@ -97,6 +100,10 @@
     border-bottom: var(--Modal-body-borderTop);
     border-top-left-radius: var(--Modal-content-borderRadius);
     border-top-right-radius: var(--Modal-content-borderRadius);
+    &-icons{
+      position: absolute;
+      right: 24px;
+    }
   }
 
   &-title {
@@ -137,6 +144,9 @@
         }
       }
     }
+  }
+  &-screen{
+    margin-right: #{px2rem(16px)};
   }
 
   &-content > &-close {
