fix: 级联选择器移动端多选模式超出不显示

--- a/packages/amis-ui/scss/components/form/_nested-select.scss
+++ b/packages/amis-ui/scss/components/form/_nested-select.scss
@@ -14,6 +14,11 @@
 
   &.is-mobile {
     text-align: right;
+
+    .#{$ns}ResultBox-value-wrap {
+      flex-wrap: wrap !important;
+      flex: 1;
+    }
   }
 
   &-optionArrowRight {
