--- a/packages/amis-ui/scss/components/form/_nested-select.scss
+++ b/packages/amis-ui/scss/components/form/_nested-select.scss
@@ -16,6 +16,7 @@
     text-align: right;
 
     .#{$ns}ResultBox-value-wrap {
+      min-width: 0;
       flex-wrap: wrap !important;
       flex: 1;
     }
