fix: 级联选择器移动端多选模式超出不显示 (#12039)
* fix: Image 组件通过css设置transform 属性不生效

* feat: 轮播图增加跑马灯模式

* fix: 级联选择器移动端多选模式超出不显示

* Update _nested-select.scss

---------

Co-authored-by: zhangxulong <zhangxulong@baidu.com>

--- a/packages/amis-ui/scss/components/form/_nested-select.scss
+++ b/packages/amis-ui/scss/components/form/_nested-select.scss
@@ -14,6 +14,12 @@
 
   &.is-mobile {
     text-align: right;
+
+    .#{$ns}ResultBox-value-wrap {
+      min-width: 0;
+      flex-wrap: wrap !important;
+      flex: 1;
+    }
   }
 
   &-optionArrowRight {
