feat: Select, ResultBox, Picker, 选项超出收起功能支持自适应宽度

--- a/packages/amis-ui/scss/_mixins.scss
+++ b/packages/amis-ui/scss/_mixins.scss
@@ -687,6 +687,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    flex-shrink: 0;
 
     &:hover {
       background: var(--Form-selectValue-onHover-bg);
