--- a/packages/amis-ui/scss/themes/_common.scss
+++ b/packages/amis-ui/scss/themes/_common.scss
@@ -35,6 +35,7 @@
 @import '../components/chart';
 @import '../components/video';
 @import '../components/audio';
+@import '../components/auto-folder';
 @import '../components/panel';
 @import '../components/service';
 @import '../components/sparkline';
