--- a/packages/amis-ui/scss/components/_crud.scss
+++ b/packages/amis-ui/scss/components/_crud.scss
@@ -14,6 +14,38 @@
     gap: var(--gap-xs);
     line-height: 1;
 
+    > .#{$ns}AutoFoldedList-more > span {
+      line-height: calc(
+        var(--Form-input-lineHeight) * var(--Form-input-fontSize) - #{px2rem(
+            2px
+          )}
+      );
+      font-size: var(--Pick-base-value-fontSize);
+      color: var(--Pick-base-value-color);
+      font-weight: var(--Pick-base-value-fontWeight);
+      background: var(--Pick-base-value-bgColor);
+      border-width: var(--Pick-base-value-top-border-width)
+        var(--Pick-base-value-right-border-width)
+        var(--Pick-base-value-bottom-border-width)
+        var(--Pick-base-value-left-border-width);
+      border-style: var(--Pick-base-value-top-border-style)
+        var(--Pick-base-value-right-border-style)
+        var(--Pick-base-value-bottom-border-style)
+        var(--Pick-base-value-left-border-style);
+      border-color: var(--Pick-base-value-top-border-color)
+        var(--Pick-base-value-right-border-color)
+        var(--Pick-base-value-bottom-border-color)
+        var(--Pick-base-value-left-border-color);
+      border-radius: var(--Pick-base-top-left-border-radius)
+        var(--Pick-base-top-right-border-radius)
+        var(--Pick-base-bottom-right-border-radius)
+        var(--Pick-base-bottom-left-border-radius);
+
+      &:hover {
+        background: var(--Form-selectValue-onHover-bg);
+      }
+    }
+
     &-overflow {
       &-wrapper {
         display: flex;
