--- a/packages/amis-ui/scss/components/form/_picker.scss
+++ b/packages/amis-ui/scss/components/form/_picker.scss
@@ -107,12 +107,45 @@
 
   &-valueWrap {
     flex-grow: 1;
+    min-width: 0;
     position: relative;
     padding: var(--Form-input-paddingY) var(--Form-input-paddingX);
 
     > input {
       width: px2rem(16px);
       display: inline-block;
+    }
+
+    > .#{$ns}AutoFoldedList-more > span {
+      line-height: calc(
+        var(--Form-input-lineHeight) * var(--Form-input-fontSize) - #{px2rem(
+            2px
+          )}
+      );
+      font-size: var(--Pick-base-value-fontSize);
+      color: var(--Pick-base-value-color);
+      font-weight: var(--Pick-base-value-fontWeight);
+      background: var(--Pick-base-value-bgColor);
+      border-width: var(--Pick-base-value-top-border-width)
+        var(--Pick-base-value-right-border-width)
+        var(--Pick-base-value-bottom-border-width)
+        var(--Pick-base-value-left-border-width);
+      border-style: var(--Pick-base-value-top-border-style)
+        var(--Pick-base-value-right-border-style)
+        var(--Pick-base-value-bottom-border-style)
+        var(--Pick-base-value-left-border-style);
+      border-color: var(--Pick-base-value-top-border-color)
+        var(--Pick-base-value-right-border-color)
+        var(--Pick-base-value-bottom-border-color)
+        var(--Pick-base-value-left-border-color);
+      border-radius: var(--Pick-base-top-left-border-radius)
+        var(--Pick-base-top-right-border-radius)
+        var(--Pick-base-bottom-right-border-radius)
+        var(--Pick-base-bottom-left-border-radius);
+
+      &:hover {
+        background: var(--Form-selectValue-onHover-bg);
+      }
     }
   }
 
