--- a/packages/amis-ui/scss/components/form/_selection.scss
+++ b/packages/amis-ui/scss/components/form/_selection.scss
@@ -76,6 +76,7 @@
     flex-direction: row;
 
     > .#{$ns}Checkbox {
+      margin-top: 0;
       margin-right: px2rem(10px);
     }
     cursor: pointer;
@@ -330,6 +331,7 @@
     flex-direction: row;
 
     > .#{$ns}Checkbox {
+      margin-top: 0;
       margin-right: 0;
     }
     cursor: pointer;
